breking code on purpose

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   min-height: 100vh;
-  background: yellow;
+  background: rgb(55, 26, 221);
   color: #333;
   padding: 20px;
 }
